@@ -3,6 +3,7 @@
 - feat: Added the player's current points to the round summaries (#22)
 - feat: Added the possibility to set the maximum rank point range (#21)
 - upgrade: Improved target selection to prefer single matches and require @ prefix for multi-targeting (#21)
+- upgrade: Enhanced the database backup process with proper error handling
 - fix: Fixed storage reset command transaction issues (#21)
 - fix: Fixed CustomTags connect apply issue with third-party plugins
 - chore: Updated Polish and Chinese translations
